<resources>
    <string name="app_name">g31 galgeleg</string>
    <string name="title_activity_word_list">WordList</string>
    <string name="toolbar_name">Galgeleg</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Henter nye ord</string>
    <string name="new_word">Nyt ord</string>
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="z">Z</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="b">B</string>
    <string name="n">N</string>
    <string name="m">M</string>

    <string name="spil">Spil</string>
    <string name="rules">Regler</string>
    <string name="word_list">Ord liste</string>
    <string name="highscore">Highscore</string>

    <string name="indtast_navn">Indtast navn:</string>
    <string name="save">Gem highscore</string>
    <string name="dont_save">Gem ikke</string>
    <string name="newGame">Start Nyt Spil!</string>
    <string name="toMenu">Tilbage til menu</string>
    <string name="gameOver">Game Over</string>
    <string name="changeWordLength">Skift ordlængde</string>
    <string name="ruleDescription">Galgelegsspillet går ud på at gætte et ord, på en valgfri længde.\nDe mulige ord er danske ord, uden \"æ\", \"ø\" og \"å\".\nMan må gætte forkert 7 gange før man taber.\nHvis man gætter ordet får man en score ud fra hvor mange bogstaver der var i ordet, hvor mange forsøg man brugte og hvor hurtig man var.\nHvis man ikke gætter ordet inden tiden løber ud taber man.</string>
</resources>
