<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:title="@string/toolbar_name"/>


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/main_toolbar">

        <ImageView
            android:id="@+id/galgeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/galge"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/visibleWord"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/galgeView"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/relativeLayout">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q"
                    android:layout_weight="1"
                    android:id="@+id/btn1"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/w"
                    android:layout_weight="1"
                    android:id="@+id/btn2"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e"
                    android:layout_weight="1"
                    android:id="@+id/btn3"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/r"
                    android:layout_weight="1"
                    android:id="@+id/btn4"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t"
                    android:layout_weight="1"
                    android:id="@+id/btn5"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/y"
                    android:layout_weight="1"
                    android:id="@+id/btn6"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/u"
                    android:layout_weight="1"
                    android:id="@+id/btn7"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i"
                    android:layout_weight="1"
                    android:id="@+id/btn8"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o"
                    android:layout_weight="1"
                    android:id="@+id/btn9"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p"
                    android:layout_weight="1"
                    android:id="@+id/btn10"
                    />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a"
                android:layout_weight="1"
                android:id="@+id/btn12"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/s"
                android:layout_weight="1"
                android:id="@+id/btn13"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d"
                android:layout_weight="1"
                android:id="@+id/btn14"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f"
                android:layout_weight="1"
                android:id="@+id/btn15"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g"
                android:layout_weight="1"
                android:id="@+id/btn16"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h"
                android:layout_weight="1"
                android:id="@+id/btn17"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/j"
                android:layout_weight="1"
                android:id="@+id/btn18"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k"
                android:layout_weight="1"
                android:id="@+id/btn19"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l"
                android:layout_weight="1"
                android:id="@+id/btn20"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z"
                android:layout_weight="1"
                android:id="@+id/btn23"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x"
                android:layout_weight="1"
                android:id="@+id/btn24"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:layout_weight="1"
                android:id="@+id/btn25"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v"
                android:layout_weight="1"
                android:id="@+id/btn26"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b"
                android:layout_weight="1"
                android:id="@+id/btn27"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n"
                android:layout_weight="1"
                android:id="@+id/btn28"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:layout_weight="1"
                android:id="@+id/btn29"
                />
        </LinearLayout>

    </LinearLayout>
    </RelativeLayout>

    <Button
        android:theme="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_word"
        android:id="@+id/newWordBtn"
        android:layout_gravity="center_vertical"
        android:layout_above="@+id/timeLeft"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/timeLeft"
        android:layout_above="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:textColor="#000"
        />

</RelativeLayout>

