<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/spil"
        android:id="@+id/gameButton"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:id="@+id/rulesButton"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/highscore"
        android:id="@+id/highscore"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_list"
        android:id="@+id/wordButton"
        android:layout_gravity="center_horizontal" />
</LinearLayout>