<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jonas.galgelegaflevering.GameOverFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/gameOverTitle"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_title_material"
        android:text="@string/gameOver" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/gameOverStatus"
        android:gravity="center"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/newGame"
        android:layout_marginTop="10dp"
        android:id="@+id/newGameButton"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/changeWordLength"
        android:id="@+id/changeWordLengthBtn"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/toMenu"
        android:id="@+id/toMainMenu"
        android:layout_gravity="center_horizontal"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameOverImage"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

</LinearLayout>
